# Eval_DESU_ML

./: Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
little_one/: __init__.py  dataset.py  features.py  plots.py
little_one/modeling/: predict.py  train.py
notebooks/: extraVSintro_project.ipynb
