[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "little_one"
version = "0.0.1"
description = "Evaluation - MachineLearning - DESU - 2025"
authors = [
  { name = "Aurore_Lapuyade-Aufoo" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["little_one"]
include = ["pyproject.toml", "little_one/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["little_one"]
force-sort-within-sections = true

